--- a/index.html
+++ b/index.html
@@ -160,8 +160,34 @@
         let ratingsGridSentinel = null;
 
         // --- i18n Functions ---
+        const SUPPORTED_LANGUAGES = ['zh', 'en', 'es'];
+
+        function normalizeLanguageTag(tag) {
+            if (!tag || typeof tag !== 'string') return null;
+            const normalized = tag.trim().toLowerCase();
+            return SUPPORTED_LANGUAGES.includes(normalized) ? normalized : null;
+        }
+
+        function detectLanguageFromPath() {
+            if (typeof window === 'undefined' || !window.location) return null;
+            const segments = window.location.pathname.split('/').filter(Boolean);
+            if (!segments.length) return null;
+            return normalizeLanguageTag(segments[0]);
+        }
+
+        function detectLanguageFromQuery() {
+            if (typeof window === 'undefined' || !window.location) return null;
+            const params = new URLSearchParams(window.location.search);
+            return normalizeLanguageTag(params.get('lang') || params.get('lng'));
+        }
+
+        function getInitialLanguage() {
+            return detectLanguageFromQuery() || detectLanguageFromPath() || null;
+        }
+
         async function initI18n() {
             return new Promise((resolve, reject) => {
+                const initialLanguage = getInitialLanguage();
                 i18next
                     .use(i18nextHttpBackend)
                     .use(i18nextBrowserLanguageDetector)
@@ -172,6 +198,8 @@
                         // This tells i18next: if you detect 'zh-CN', try loading just 'zh'
                         nonExplicitSupportedLngs: true, // Allow loading 'zh' if 'zh-CN' is detected
                         load: 'languageOnly', // Try loading 'zh' before 'zh-CN'
+                        supportedLngs: SUPPORTED_LANGUAGES,
+                        lng: initialLanguage || undefined,
                         // *** MODIFICATION END ***
                         debug: false, // Set to false for production
                         ns: ['translation'],
@@ -180,8 +208,10 @@
                             loadPath: '/locales/{{lng}}.json?v=1' // Use cache busting
                         },
                         detection: {
-                            order: ['localStorage', 'navigator'],
-                            caches: ['localStorage']
+                            order: ['querystring', 'path', 'localStorage', 'navigator'],
+                            caches: ['localStorage'],
+                            lookupQuerystring: 'lang',
+                            lookupFromPathIndex: 0
                         }
                     }, (err, t) => {
                         if (err) {
@@ -203,7 +233,8 @@
         }
 
         function getBaseLanguage(language) {
-            return language ? language.split('-')[0] : 'zh';
+            const base = language ? language.split('-')[0] : 'zh';
+            return SUPPORTED_LANGUAGES.includes(base) ? base : 'zh';
         }
 
         function updateSeoMetadata() {
@@ -287,7 +318,7 @@
             const container = document.getElementById('language-flags');
             if (!container) return;
             container.innerHTML = '';
-            const languages = ['zh', 'en', 'es'];
+            const languages = SUPPORTED_LANGUAGES;
             // Get the base language (e.g., 'zh' from 'zh-CN')
             const currentLang = i18next.language ? i18next.language.split('-')[0] : 'zh';
 
