Fix share card image loading on mobile

--- a/results.html
+++ b/results.html
@@ -309,7 +309,7 @@
         <!-- Hidden Share Card Container (for image generation) -->
         <div id="share-card-container">
             <div id="share-card-image-wrapper">
-                <img id="share-card-image" src="" alt="Cigar Cover Image" crossorigin="anonymous" loading="lazy">
+                <img id="share-card-image" src="" alt="Cigar Cover Image" crossorigin="anonymous" loading="eager">
                 <div id="share-card-pagination" aria-hidden="true">
                     <span></span>
                     <span></span>
